frontend/src/App.css
.map-page {
  height: 100vh;
  width: 100vw;
}

.event-card {
  display: flex;
  flex-direction: column;
  max-width: 16vw;
  margin-bottom: 2rem;
}

.centre {
  width: 100vw;
  padding: 2rem 6rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}


.event_body {
  display: flex;
  flex-direction: column;
  margin-top: 0.5rem;
  align-items: flex-start;
  text-align: left;
}

.event-feed {
  height: fit-content;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  gap: 1.5rem;
  padding-top: 1rem
}

.foryou {
  display: flex;
  flex-direction: row;
  width: 100vw;
  height: fit-content;
  justify-content: center;
  gap:1.5rem;
}

.foryou-banner {
  padding-top: 5rem;
}


.hero {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: row;
  gap: 5vw;
  align-items: center;
  justify-content: center;
}

.left {
  width: 40%;
  height: 70%;
}

.right {
  width: 40%;
  height: 70%
}

.banner {
  width: 100vw;
  height: 40vh;
  display: flex;
  flex-direction: row;
  gap: 5vw;
  align-items: center;
  justify-content: center;
}

.footer {
  display: flex;
  flex-direction: row;
  height: 30vh;
  width: 100vw;
  align-items: center;
  justify-content: center;
  gap: 50vw
}

.page {
  display: flex;
  flex-direction: row;
  width: 100vw;
  gap: 5rem;
  align-content: center;
  justify-content: center;
  padding-top: 3rem;
  padding-bottom: 6rem;
}

.event-mini {
  width: 30%;
  height: fit-content;
  display: flex;
  flex-direction: column;
  gap: 1rem
}

.event-details {
  width: 50%;
  height: fit-content;
  display: flex;
  flex-direction: column;
  gap: 1rem
}

.map-page {
  width: 100vw;
  height: 100vh;
  position: relative;
  z-index: 0;
}

.gm-style-iw.gm-style-iw-c {
    box-shadow: none !important;
}
.gm-style-iw-tc::after {
    box-shadow: none !important;
}

.gm-style-iw-tc {
    filter: none !important;
    -webkit-filter: none !important;
}

.gm-style-iw-chr {
  position: absolute;
  top: 0;
  right: 1rem;
}

.gm-ui-hover-effect {
  width: 32px !important;
  height: 32px !important;
}

.gm-style-iw-d {
  padding-top: 4px;
}


.info-event-row:hover {
  color: oklch(0.622 0.167 2.522)
}

